--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 
 
 /* LOGO */
-.logo-container {
+/* .logo-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -60,7 +60,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 /* LOGO */
 
