--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 
 /* LOGO */
 
-.logo-container {
+/* .logo-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -61,7 +61,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 /* LOGO */
 
